Added deployment to the Makefile

--- a/website/Makefile
+++ b/website/Makefile
@@ -32,4 +32,7 @@ $(JADE):
 
 $(MARKDOWN_JS):
 	npm install markdown-js
+
+deploy: site
+	rsync -rv --include-from=rsync.includes . rascal-site:www.rascal-mpl.org/www/pub/TuringMachine/
 # DO NOT DELETE
